--- a/17.test.html
+++ b/17.test.html
@@ -7,8 +7,101 @@
 </head>
 <body>
     <script>
+// 1. Запросить у пользователя число и определить, оно положительное, отрицательное или ноль.
 
-        
-    </script>
+// let a = parseInt(prompt("Enter number:"))
+// if(a>0)
+// {
+//     alert("positive")
+// }
+// else if(a<0)
+// {
+//     alert("negative")
+// }
+// else(a>0)
+// {
+//     alert("0")
+// }
+
+
+// 2. Запросить у пользователя его возраст и проверить корректность введенных данных (0–120 лет).
+
+// let age = parseInt(prompt("Enter your age:"))
+// if(age > 0 && age < 120)
+// {
+//     alert("correct")
+// }
+// else{
+//     alert("incorrect")
+// }
+
+// 3. Запросить у пользователя число и вывести его модуль 
+// (|7| = 7, |-7| = 7).
+
+// let number = parseInt(prompt("Enter number: "))
+// if(number > 0)
+// {
+//     alert(number)
+// }
+// else{
+//     modul = number*(-1)
+//     alert(modul)
+// }
+
+// 4. Запросить у пользователя время (часы, минуты, секунды) 
+
+// let hours = parseInt(prompt("Enter hours: "))
+// let minutes = parseInt(prompt("Enter minutes: "))
+// let seconds = parseInt(prompt("Enter seconds: "))
+// if(hours<=12 && hours>=0 , minutes<=60 && minutes>=0 ,  seconds<=60 && seconds>=0)
+// {
+//     alert("correct")
+// }
+// else{
+//     alert("error")
+// }
+
+// и проверить корректность введенных данных.
+// 5. Запросить координаты точки (x, y) и определить номер 
+// четверти, в которую попала эта точка. Необходимо учесть 
+// случаи попадания точки на оси X или Y или в начало 
+// координат
+
+// let x = parseInt(prompt("Enter X: "))
+// let y = parseInt(prompt("Enter Y: "))
+// if(x > 0 && y > 0)
+// {
+//     alert("1 quarter")
+// }
+// else if(x < 0 && y > 0)
+// {
+//     alert("2 quarter")
+// }
+// else if(x > 0 && y < 0)
+// {
+//     alert("4 quarter")
+// }
+// else if(x = 0)
+// {
+//     alert("point on the Y axis")
+// }
+// else if(y = 0)
+// {
+//     alert("point on the X axis")
+// }
+// else if(y == 0 && x == 0)
+// {
+//     alert("start of axises")
+// }
+// else{
+//     alert("error")
+// }
+
+
+
+        // let a = parseInt(prompt("Enter digit: "));
+        // let res = a%2 == 0? true:false;
+        // alert(res)
+        </script>
 </body>
 </html>
