--- a/17.test.html
+++ b/17.test.html
@@ -77,6 +77,10 @@
 // {
 //     alert("2 quarter")
 // }
+// else if(x < 0 && y <0)
+// {
+//     alert("3 quarter")
+// }
 // else if(x > 0 && y < 0)
 // {
 //     alert("4 quarter")
